# mentat

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  concept2.py  concept2_runner.py  concept3.py  conftest.py  dev-requirements.txt  mentat_runner_concept.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  results.html  results.json  setup.py
.github/: pull_request_template.md
benchmarks/: README.md  arg_parser.py  benchmark_result.py  benchmark_result_list.py  benchmark_result_summary.py  benchmark_run.py  benchmark_run_summary.py  benchmark_runner.py  context_benchmark.py  edit_rubric_benchmark.py  exercism_practice.py  plot_generator.py  run_sample.py  swe_bench_runner.py
concept4/: core.py  terminal_client.py
docs/: configuration.md  requirements.txt
mentat/: __init__.py  __main__.py  agent_handler.py  api_app.py  api_code_image_gen.py  api_image_gen.py  app.py  app_conf.py  auto_completer.py  auto_context.py  broadcast.py  change_conflict_resolution.py  code_change.py  code_change_display.py  code_change_feedback.py  code_context.py  code_edit_feedback.py  code_feature.py  code_file.py  code_file_index.py  code_file_manager.py  code_map.py  commands.py  completions.py  config.py  config_manager.py  conversation.py  cost_tracker.py  ctags.py  daemon.py  default_config.json  diff_context.py  edit_history.py  embeddings.py  embeddings2.py  engine.py  errors.py  file_node.py  git_handler.py  include_files.py  (+31 more)
mentat-vscode/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: agent_mode.py  evaluate_samples.py  evolve_llm_feature_selector.py  git_log_to_transcripts.py  log_to_training_example.py  run_and_upload_benchmarks.sh  select_git_transcripts.py  transcript_viewer.py  translate_transcript.py
tests/: auto_context_test.py  benchmark_test.py  broadcast_test.py  code_change_test.py  code_context_test.py  code_feature_test.py  code_file_manager_test.py  code_map_test.py  codechange_test.py  commands_test.py  config_test.py  conftest.py  context_tree_test.py  conversation_test.py  diff_context_test.py  embeddings_test.py  file_node_test.py  git_handler_test.py  include_files_test.py  license_check.py  llm_api_handler_test.py  measure_api_speed.py  mentat_prompt_session_test.py  (+13 more)
(+442 files in other folders)
