[tool.poetry]
name = "mentat"
version = "0.1.0"
description = ""
authors = ["@bio_bootloader"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
backoff = "^2.2.1"
fire = "^0.5.0"
jinja2 = "^3.1.2"
jsonschema = ">=4.17.0"
numpy = "^1.26.0"
openai = "^1.3.0"
pillow = "^10.1.0"
prompt-toolkit = "^3.0.39"
Pygments = "^2.15.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-reportlog = "^0.4.0"
python-dotenv = "^1.0.0"
selenium = "4.15.2"
sentry-sdk = "1.34.0"
sounddevice = "0.4.6"
soundfile = "0.12.1"
termcolor = "2.3.0"
tiktoken = "0.4.0"
typing_extensions = "4.8.0"
tqdm = "4.66.1"
webdriver_manager = "4.0.1"

[tool.poetry.group.dev.dependencies]
aiomultiprocess = "^0.9.0"
black = "^23.9.1"
gitpython = "^3.1.37"
isort = "^5.12.0"
pip-licenses = "^4.3.3"
pyright = "^1.1.339"
pytest-xdist = "^3.3.1"
ruff = "^0.0.292"

[tool.isort]
profile = "black"
known_first_party = "mentat"
skip = ["vscode/bundled", "benchmark_repos"]

[tool.ruff]
line-length = 120
ignore = ["E731"]

[tool.pytest.ini_options]
addopts = "--ignore=vscode/bundled --ignore=benchmark_repos"

[tool.black]
preview = "true"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
